--- a/src/success.html
+++ b/src/success.html
@@ -6,7 +6,7 @@
     <title>Thanks for subscribing</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="bg-[#36384e] m-0">
+<body class="bg-[#36384e]">
     <main class="bg-[#36384e] font-Roboto flex flex-row  justify-center items-center h-screen">
 
         <section class="bg-white pl-4 flex flex-col items-left justify-start text-[#36384e] min-h-[100vh] md:min-h-[50vh] md:px-10 md:rounded-3xl">
